--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet">
     <title>Tela Login</title>
 </head>
-<body class="corpo">
+<body>
 
     <main class="principal">
         <h1 class="login">Login</h1>
