--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    link
-      rel="stylesheet">
+    link rel="stylesheet">
+    <script defer src="script.js"></script>
     <title>Tela Login</title>
 </head>
 <body>
