Mostrar e esconder senha

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="campo-senha">
                 <label class="senha" for="isenha"><span class="material-icons">vpn_key</span></label>
                     <input type="password" name="senha" id="isenha" maxlength="20" placeholder="Sua senha">
+                   <img id="icone_senha" src="imagens/show.png" alt="icone_senha">
             </div>
                 <a href="#" class="esquecer-senha">Esqueceu sua senha ?</a>
                 <input class="enviar" type="submit" value="Entrar">
