botao lembrar de mim

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                    <img id="icone_senha" src="imagens/show.png" alt="icone_senha">
             </div>
                 <a href="#" class="esquecer-senha">Esqueceu sua senha ?</a>
+                <div class="remember">
+                    <label for="remember">Lembrar de mim</label>
+                    <input type="checkbox" name="remember" id="remember">
+                </div>
                 <input class="enviar" type="submit" value="Entrar">
         </form>
     </main>
